# revu

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SKILL.md  index.html  package.json
.github/workflows/: deploy-pages.yml  release.yml  test.yml
scripts/: demo.sh
site/: index.html
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: commit.rs  commits.rs  diff.rs  discard.rs  mod.rs  review.rs  staging.rs  status.rs
src-tauri/src/git/: mod.rs  repository.rs  types.rs
src/components/ui/: Badge.tsx  Button.tsx  Checkbox.tsx  index.ts
src/features/comments/: CommentList.tsx  CommentPopover.tsx  index.ts
src/features/commit/: CommitPanel.tsx  index.ts
src/features/commits/: CommitFileList.tsx  CommitList.tsx  index.ts
src/features/diff/: DiffLine.tsx  DiffViewer.tsx  HighlightedContent.tsx  SplitDiffView.tsx  UnifiedDiffView.tsx  index.ts
src/features/files/: FileItem.tsx  FileList.tsx  index.ts
src/features/theme/: ThemeProvider.tsx  ThemeToggle.tsx
src/lib/: stripIndent.ts  syntax.ts  useCommentCountByFile.ts  wordDiff.ts
src/lib/demo/: demoData.ts  demoMode.ts  index.ts
src/stores/: commentStore.ts  gitStore.ts  uiStore.ts
src/types/: comment.ts  git.ts
